<resources>
    <string name="app_name">AutoPromote</string>
    <string name="title">MyTitle</string>
    <string name="make_sure">确定</string>

    <string name="main_nav_main">首页</string>
    <string name="main_nav_guide">导航</string>
    <string name="main_nav_tasks">任务</string>
    <string name="main_nav_user">我的</string>

    <string name="guide_query_hint">搜索应用</string>

    <string name="login">登录</string>
    <string name="agree_and_register">同意协议并注册</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="input_code_hint">请输入手机验证码</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="agree_contract">已阅读同意以下协议</string>
    <string name="contract_name">隐私权政策、法律声明、多开平台服务协议</string>
    <string name="smc_login">短信验证码登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="login_guide">3秒登录，体验更多内容</string>
    <string name="get_code">获取验证码</string>
    <string name="title_activity_register">注册</string>

</resources>
